--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <li>section - раздел веб-страницы</li>
                     <li>footer - раздел подвала (контакты, соц. сети copyright)</li>
                     <li>nav - раздел с меню</li>
-                    <li>div универсальный блок</li>
+                    <li>div универсальный блок))))))))))))))))))))</li>
 
                 </ul>
             </section>
