--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <li>main - весь основной блок</li>
                     <li>section - раздел веб-страницы</li>
                     <li>footer - раздел подвала (контакты, соц. сети copyright)</li>
-                    <li>nav - раздел с меню</li>
+                    <li>nav - раздел с меню))))))</li>
                     <li>div универсальный блок))))))))))))))))))))</li>
 
                 </ul>
